--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
         <div class="gallery">
             <h2>💃 Anisha's Cute Outfit Gallery 💃</h2>
-            <img src="assets/outfit1.jpg" alt="Outfit 1">
-            <img src="assets/outfit2.jpg" alt="Outfit 2">
-            <img src="assets/outfit3.jpg" alt="Outfit 3">
+            <img src="assets/Outfit 1.jpg" alt="Anisha's Outfit">
+            <img src="assets/Screenshot_20250213_214655_Gallery.jpg" alt="Anisha's Outfit">
+            <img src="assets/Screenshot_20250213_214829_Gallery.jpg" alt="Anisha's Outfit">
         </div>
 
         <div class="quiz">
