--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="container">
         <h1>💖 Happy Valentine's Day, Anisha! 💖</h1>
-        <p>To my favorite person, my cutest fashionista, and my movie-watching partner! I love you so much. 💕</p>
+        <p>To my favorite person, my cutie butie fashionista, and my anime watching bish I love you so much ONLY SAYING IT THIS TIME. 💕</p>
 
         <div class="love-note">
             <h2>📖 Flip the Book 📖</h2>
