--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2>📚 Flip the Book 📚</h2>
             <p>Click the button to reveal a cute message!</p>
             <button class="btn" onclick="revealNote()">Flip!</button>
-            <p id="note">💌 [Your love message will appear here!] 💌</p>
+            <p id="note">💌 [dilo ka shooter hai mera scooter] 💌</p>
         </div>
 
         <div class="gallery">
