--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
 
     <div class="container">
-        <h1>💖 Happy Valentine's Day, Anisha! 💖</h1>
+        <h1>💖 Happy Valentine's Day, Anuu girll 💖</h1>
         <p>To my favorite person, my cutie butie fashionista, and my anime and series watching bish I love you so much ONLY SAYING IT THIS TIME YEAH. 💕</p>
 
         <div class="love-note">
